k8s/longhorn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`longhorn.k8s.lab.lemisieur.com`)
    kind: Rule
    priority: 10
    middlewares:
    - name: oauth2-signin
      namespace: oauth2-proxy
    services:
    - name: longhorn-frontend
      port: 80
